# centraid

./: .dockerignore  .env.example  .gitignore  .oxfmtrc.jsonc  .oxlintrc.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONSTITUTION.md  CONTRIBUTING.md  COSTS.md  Dockerfile  LICENSE  QUALITY.md  README.md  SECURITY.md  STEERING.md  TESTING.md  astro.config.mjs  bunfig.toml  duaility-ontology.html  flake.nix  index.html  knip.json  package.json  tsconfig.base.json  tsconfig.electron.json  tsconfig.expo.json  turbo.json  vitest.config.ts  vitest.perf.config.ts  vitest.scale.config.ts  worker-configuration.d.ts  wrangler.docs.toml  wrangler.json
.design-sync/: NOTES.md  config.json  conventions.md  desktop.NOTES.md  desktop.config.json  desktop.conventions.md
.githooks/: commit-msg  post-commit  pre-commit  pre-push  prepare-commit-msg
.governance/: freshness.conf  install.yaml  integrity.conf  lib.sh  run.sh
apps/web/iroh-wasm/: Cargo.toml  OFFICIAL-BINDING-EVALUATION.md  RELAY-POLICY.md  rust-toolchain.toml
apps/web/iroh-wasm/src/: lib.rs
assets/: icon-explorations.html  icon.icns  logo-explorations.html
docs/: 404.html  NOTICE.md  _headers  apps.html  client-keying.md  coding-standards.md  config-ownership.md  data.html  decisions.md  dev-environment.md  devices.html  docs.json  enrollment.md  getting-started.mdx  glossary.md  identifiers.md  index.html  index.mdx  logs.md  multi-agent.md  oauth-assist.md  ontology.html  platform-gating.md  protocol.md  quickstart.mdx  release.md  runners.md  start.html
receipts/: issue-1.md  issue-103-theme-picker.md  (+244 more)
(+1354 files in other folders)
