[package]
name = "centraid-web-iroh"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
console_error_panic_hook = "0.1.7"
futures-util = "0.3.31"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
iroh = { version = "1.0.0", default-features = false, features = ["tls-ring"] }
iroh-tickets = "1.0.0"
js-sys = "0.3.85"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", default-features = false, features = ["io-util"] }
wasm-bindgen = "=0.2.108"
wasm-bindgen-futures = "0.4.58"
wasm-streams = "0.5.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"
